2014-02-09  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/pwd.h: Include <sys/cdefs.h>.
	* libc/include/grp.h: Ditto.

2014-02-04  Matthias Braun  <matze@braunis.de>

	* libm/mathfp/sf_numtest.c: Fix NaN/Inf detection logic.

2014-01-20  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/setjmp.h (longjmp): Fix copy/paste error.

2014-01-19  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/setjmp.h (longjmp): Mark "noreturn" when building with
	GCC.

2014-01-17  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/pwd.h: Use __foo_VISIBLE macros from sys/cdefs.h.
	(setpassent): Declare.

2014-01-17  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/include/sys/_default_fcntl.h (LOCK_SH): Define.
	(LOCK_EX): Likewise.
	(LOCK_NB): Likewise.
	(LOCK_UN): Likewise.
	(flock): Declare.

2014-01-17  Corinna Vinschen  <vinschen@redhat.com>

	Introduce _STDIO_BSD_SEMANTICS flag to switch fclose/exit file flushing
	semantics from POSIX to BSD.
	* libc/stdio/fclose.c (_fclose_r): Conditionalize file flushing on
	_STDIO_BSD_SEMANTICS.  Call __sflush_r rather than _fflush_r.  Add
	comment.
	* libc/stdio/fflush.c (__sflushw_r): New function, only available
	if _STDIO_BSD_SEMANTICS is defined.
	* libc/stdio/findfp.c (_cleanup_r): Call _fwalk_reent rather than
	_fwalk.  Conditionalize cleanup function call on _STDIO_BSD_SEMANTICS.
	Add comments.  Add FIXME.
	* libc/stdio/local.h (__sflushw_r): Declare if _STDIO_BSD_SEMANTICS is
	defined.

2014-01-06  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/include/sys/_default_fcntl.h (AT_FDCWD): Define according
	to POSIX.
	(AT_EACCESS): Likewise.
	(AT_SYMLINK_NOFOLLOW): Likewise.
	(AT_SYMLINK_FOLLOW): Likewise.
	(AT_REMOVEDIR): Likewise.
	(openat): Declare according to POSIX.
	* libc/include/stdio.h (renameat): Likewise.
	* libc/include/sys/stat.h (fchmodat): Likewise.
	(fstatat): Likewise.
	(mkdirat): Likewise.
	(mkfifoat): Likewise.
	(mknodat): Likewise.
	(utimensat): Likewise.